# axum-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: errors.rs  main.rs  response.rs  router.rs  state.rs
src/clients/: auth_client.rs  mod.rs  service_client.rs
src/config/: app_specific.rs  mod.rs
src/handlers/: health_handler.rs  hello_handler.rs  kms_app_access_handler.rs  mod.rs  redis_handler.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/models/: kms_app_access.rs  mod.rs
src/repository/: kms_app_access_repo.rs  mod.rs
src/services/: kms_app_access_service.rs  mod.rs
src/setup/: database.rs  http.rs  mod.rs  nacos.rs  redis.rs
src/utils/: mod.rs  validated_json.rs
